干掉大部分警告